fix: jenkins security audit patch 2 (#15)