@@ -20,13 +20,13 @@ public class TacotruckCLIHelper {
 
     protected static CLIResult executeCLI(
             String[] command, Launcher launcher, TaskListener listener, FilePath workspace)
-            throws InterruptedException {
+            throws IOException, InterruptedException {
         return executeCLI(command, launcher, listener, workspace, null);
     }
 
     protected static CLIResult executeCLI(
             String[] command, Launcher launcher, TaskListener listener, FilePath workspace, EnvVars envVars)
-            throws InterruptedException {
+            throws IOException, InterruptedException {
         try {
             ArgumentListBuilder args = new ArgumentListBuilder();
             for (String arg : command) {
@@ -46,16 +46,22 @@ public class TacotruckCLIHelper {
 
             return new CLIResult(exitCode, output, exitCode == 0, null);
 
+        } catch (InterruptedException e) {
+            String errorMsg = "✗ Failed to execute CLI command: " + e.getMessage();
+            listener.getLogger().println(errorMsg);
+            LOGGER.severe(errorMsg);
+            throw e;
         } catch (IOException e) {
             String errorMsg = "✗ Failed to execute CLI command: " + e.getMessage();
             listener.getLogger().println(errorMsg);
             LOGGER.severe(errorMsg);
-            return new CLIResult(-1, "", false, e.getMessage());
+            throw e;
         }
     }
 
     protected static boolean isTacotruckCliAvailable(
-            Launcher launcher, TaskListener listener, FilePath workspace, EnvVars envVars) {
+            Launcher launcher, TaskListener listener, FilePath workspace, EnvVars envVars)
+            throws IOException, InterruptedException {
         try {
             CLIResult result = executeCLI(
                     new String[] {"npx", "@testfiesta/tacotruck", "--version"}, launcher, listener, workspace, envVars);
@@ -76,49 +82,37 @@ public class TacotruckCLIHelper {
                 }
                 return false;
             }
-        } catch (InterruptedException e) {
+        } catch (IOException e) {
             Thread.currentThread().interrupt();
             LOGGER.fine("TacoTruck CLI availability check was interrupted");
             listener.getLogger().println("✗ TacoTruck CLI availability check was interrupted");
-            return false;
+            throw e;
         }
     }
 
-    protected static boolean isTacotruckCliAvailable(Launcher launcher, TaskListener listener, FilePath workspace) {
+    protected static boolean isTacotruckCliAvailable(Launcher launcher, TaskListener listener, FilePath workspace)
+            throws IOException, InterruptedException {
         return isTacotruckCliAvailable(launcher, listener, workspace, null);
     }
 
-    protected static String findNpxPath(Launcher launcher, TaskListener listener, FilePath workspace, EnvVars envVars) {
-        try {
-            CLIResult result = executeCLI(new String[] {"which", "npx"}, launcher, listener, workspace, envVars);
-            return result.isSuccess() ? result.getOutput() : null;
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-            LOGGER.fine("Finding npx path was interrupted");
-            return null;
-        }
+    protected static String findNpxPath(Launcher launcher, TaskListener listener, FilePath workspace, EnvVars envVars)
+            throws IOException, InterruptedException {
+        CLIResult result = executeCLI(new String[] {"which", "npx"}, launcher, listener, workspace, envVars);
+        return result.isSuccess() ? result.getOutput() : null;
     }
 
     protected static String getTacotruckCliVersion(
-            Launcher launcher, TaskListener listener, FilePath workspace, EnvVars envVars) {
-        try {
-            String npxPath = findNpxPath(launcher, listener, workspace, envVars);
-            CLIResult result = executeCLI(
-                    new String[] {npxPath, "@testfiesta/tacotruck", "--version"},
-                    launcher,
-                    listener,
-                    workspace,
-                    envVars);
+            Launcher launcher, TaskListener listener, FilePath workspace, EnvVars envVars)
+            throws IOException, InterruptedException {
+        String npxPath = findNpxPath(launcher, listener, workspace, envVars);
+        CLIResult result = executeCLI(
+                new String[] {npxPath, "@testfiesta/tacotruck", "--version"}, launcher, listener, workspace, envVars);
 
-            return result.isSuccess() ? result.getOutput() : null;
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-            LOGGER.fine("Getting TacoTruck CLI version was interrupted");
-            return null;
-        }
+        return result.isSuccess() ? result.getOutput() : null;
     }
 
-    protected static String getTacotruckCliVersion(Launcher launcher, TaskListener listener, FilePath workspace) {
+    protected static String getTacotruckCliVersion(Launcher launcher, TaskListener listener, FilePath workspace)
+            throws IOException, InterruptedException {
         return getTacotruckCliVersion(launcher, listener, workspace, null);
     }
 
@@ -154,7 +148,7 @@ public class TacotruckCLIHelper {
         return cmd.toArray(new String[0]);
     }
 
-    protected static boolean submitResults(
+    protected static CLIResult submitResults(
             String provider,
             String resultsPath,
             String projectKey,
@@ -165,42 +159,37 @@ public class TacotruckCLIHelper {
             Launcher launcher,
             TaskListener listener,
             FilePath workspace,
-            EnvVars envVars) {
+            EnvVars envVars)
+            throws IOException, InterruptedException {
 
         listener.getLogger().println("Submitting test results to TacoTruck...");
 
-        try {
-            String npxPath = findNpxPath(launcher, listener, workspace, envVars);
-            String[] command =
-                    buildSubmitCommand(provider, resultsPath, projectKey, apiToken, handle, runName, baseUrl, npxPath);
+        String npxPath = findNpxPath(launcher, listener, workspace, envVars);
+        String[] command =
+                buildSubmitCommand(provider, resultsPath, projectKey, apiToken, handle, runName, baseUrl, npxPath);
 
-            StringBuilder logCmd = new StringBuilder();
-            for (int i = 0; i < command.length; i++) {
-                if (i > 0) logCmd.append(" ");
-                // Hide the token value for security
-                if ("--token".equals(command[i]) && i + 1 < command.length) {
-                    logCmd.append("--token ***");
-                    i++; // Skip the actual token value
-                } else {
-                    logCmd.append(command[i]);
-                }
+        StringBuilder logCmd = new StringBuilder();
+        for (int i = 0; i < command.length; i++) {
+            if (i > 0) logCmd.append(" ");
+            // Hide the token value for security
+            if ("--token".equals(command[i]) && i + 1 < command.length) {
+                logCmd.append("--token ***");
+                i++; // Skip the actual token value
+            } else {
+                logCmd.append(command[i]);
             }
-            listener.getLogger().println("Executing: " + logCmd.toString());
-
-            CLIResult result = executeCLI(command, launcher, listener, workspace, envVars);
-
-            listener.getLogger().println(result.getOutput());
-
-            return result.isSuccess();
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-            listener.getLogger().println("✗ Test result submission was interrupted");
-            return false;
         }
+        listener.getLogger().println("Executing: " + logCmd.toString());
+
+        CLIResult result = executeCLI(command, launcher, listener, workspace, envVars);
+
+        listener.getLogger().println(result.getOutput());
+
+        return result;
     }
 
     protected static String getApiToken(String credentialsId) {
-        if (credentialsId == null || credentialsId.trim().isEmpty()) {
+        if (credentialsId == null || credentialsId.isBlank()) {
             return null;
         }
 
@@ -212,7 +201,7 @@ public class TacotruckCLIHelper {
         return null;
     }
 
-    protected static boolean submitResultsWithCredentials(
+    protected static CLIResult submitResultsWithCredentials(
             String provider,
             String resultsPath,
             String projectKey,
@@ -223,12 +212,12 @@ public class TacotruckCLIHelper {
             Launcher launcher,
             TaskListener listener,
             FilePath workspace,
-            EnvVars envVars) {
+            EnvVars envVars)
+            throws IOException, InterruptedException {
 
         String apiToken = getApiToken(credentialsId);
         if (apiToken == null) {
             LOGGER.severe("✗ Failed to retrieve API token from credentials: " + credentialsId);
-            return false;
         }
 
         return submitResults(
